--- a/templates/favoritesview.html
+++ b/templates/favoritesview.html
@@ -1,14 +1,10 @@
-<header>
-  <h1>
-NASA Photo Gallery
-  </h1>
-  <form method="GET" action="/search/">
-    {{ form.search_input.label }}
-    {{ form.search_input(size=32) }}
-    <input type="submit" value="Submit">
-  </form>
-</header>
-
-{% for item in favorites_album %}
-  <img src=item> #please make this show the images i dunno how the API works
-{% endfor %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>NASA APOD Gallery</title>
+    <link rel="stylesheet" href="styles/index.css">
+</head>
+<body>
+    <h1>NASA Photo Gallery - Favorites</h1>
+</body>
+</html>
