--- a/templates/favoritesview.html
+++ b/templates/favoritesview.html
@@ -1,14 +1,21 @@
-<header>
-  <h1>
-NASA Photo Gallery
-  </h1>
-  <form method="GET" action="/search/">
-    {{ form.search_input.label }}
-    {{ form.search_input(size=32) }}
-    <input type="submit" value="Submit">
-  </form>
-</header>
-
-{% for item in favorites_album %}
-  <img src=item> #please make this show the images i dunno how the API works
-{% endfor %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  {{ bootstrap.load_css() }}
+</head>
+<body>
+  <div>
+    <a href="/">Search</a><br><br>
+  </div>
+  <header class="mt-5">
+    <h1>My Favorite Space Pictures</h1>
+    {% for im in images %}
+      <img src="{{im.url}}" alt="{{im.title}}" class="rounded w-50"><br>
+      <a href="still gotta work on this">{{im.title}}</a> <br> <hr>
+    {% endfor %}
+  </header>
+</body>
+</html>
